--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.6.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.0"
