--- a/server/.gitignore
+++ b/server/.gitignore
@@ -11,5 +11,6 @@ yarn-error.log
 .env.local
 
 # Ignore build artifacts or any compiled files (if you use TypeScript or other compilers)
+.vscode/
 build/
 dist/
