--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --files src/server.ts",
+    "dev": "ts-node-dev --files src/index.ts",
     "build": "tsc && cp ./package.json ./build",
-    "start": "node build/server.js"
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
