--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,13 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
+    "resend": "^6.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
